projects: fix alignment

--- a/app/assets/stylesheets/projects.css.scss
+++ b/app/assets/stylesheets/projects.css.scss
@@ -1,16 +1,27 @@
 #project_markdown {
-  display: none;
+    display: none;
 }
 
-.project {
-    line-height: 150%;
-    max-width: 500px;
 
-    .release-date {
-	font-size: 90%;
-	color: #797979;
+.project-list {
+    float: left;
+
+    .project {
+	line-height: 150%;
+	max-width: 500px;
+
+	dd {
+	    margin: 0;
+	}
+
+	.release-date {
+	    font-size: 90%;
+	    color: #797979;
+	}
     }
+
 }
+
 
 #project-layout {
     max-width: 960px;
